fix: scrollbar color in code blocks

--- a/themes/PaperMod/assets/css/includes/scroll-bar.css
+++ b/themes/PaperMod/assets/css/includes/scroll-bar.css
@@ -31,8 +31,8 @@
 }
 
 .post-content :not(table) ::-webkit-scrollbar-thumb {
-    border: 2px solid var(--hljs-bg);
-    background: var(--tertiary);;
+    border: 2px solid var(--theme);    
+    background: var(--tertiary);
 }
 
 .post-content :not(table) ::-webkit-scrollbar-thumb:hover {
